fixing weird shifting bug for sort options

--- a/src/App.scss
+++ b/src/App.scss
@@ -273,14 +273,13 @@ $darkerblue: #495d65;
 #archive {
   .sort-options {
     padding-top: 10px;
-    height: 75px;
+    padding-bottom: 20px;
+    height: min-content;
     width: 100%;
     z-index: 10;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
 
     #label {
       font-family: $playful-font;
